--- a/public/register.html
+++ b/public/register.html
@@ -164,7 +164,8 @@
             const formObject = Object.fromEntries(formData.entries());
 
             try {
-                const response = await fetch("https://phantasm.onrender.com/api/auth/register", {
+                const response = await fetch("https://phantasm2025.vercel.app/api/events"
+, {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
