--- a/profile.html
+++ b/profile.html
@@ -580,7 +580,7 @@ document.addEventListener("DOMContentLoaded", () => {
     }
 
 function fetchUserProfile() {
-    fetch("/api/user/get-profile", {
+    fetch("https://phantasm.onrender.com/api/user/get-profile", {
         method: "GET",
         credentials: "include",
     })
