--- a/profile.html
+++ b/profile.html
@@ -610,7 +610,7 @@ function fetchUserProfile() {
 
 
     function updateRegisteredEvents() {
-        fetch("https://phantasm.onrender.com/api/events/get-events/api/user/get-events", {
+        fetch("https://phantasm.onrender.com/api/user/get-events", {
             method: "GET",
             credentials: "include",
         })
