--- a/profile.html
+++ b/profile.html
@@ -569,6 +569,8 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     </p>
 </footer>
     <script>
+
+        const token = localStorage.getItem("token"); 
 document.addEventListener("DOMContentLoaded", () => {
     
     async function handleFetchError(response) {
