--- a/profile.html
+++ b/profile.html
@@ -615,7 +615,7 @@ function fetchUserProfile() {
         fetch("https://phantasm.onrender.com/api/user/get-events", {
             
             method: "GET",
-                    "Authorization": token ? `Bearer ${token}` : "",
+         headers: { "Authorization": `Bearer ${localStorage.getItem("token")}` },
             credentials: "include",
         })
         .then(response => handleFetchError(response))
@@ -662,7 +662,7 @@ const formData = {
                 const response = await fetch("https://phantasm.onrender.com/api/user/update-profile", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                            "Authorization": token ? `Bearer ${token}` : "",
+         headers: { "Authorization": `Bearer ${localStorage.getItem("token")}` },
                     credentials: "include",
                     body: JSON.stringify(formData),
                 });
